# oasis

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-db  README.md  diesel.toml  docker-compose.yaml
migrations/2021-03-28-231536_oasis/: up.sql
oasis/: .gitignore  Cargo.toml  README.md
oasis/src/: hello.html  main.rs
src/: main.rs  models.rs
templates/: base.html  index.html  post.html
tests/: login_test.rs  test_server.rs
