[package]
name = "Oasis"
version = "0.1.0"
authors = ["Matt Hurt <mhurt@msudenver.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1"
serde = "1.0"
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.10"
mysqlclient-sys = { version = ">=0.1.0, <0.3.0", optional = true }
