[package]
name = "Oasis"
version = "0.1.0"
authors = ["Matt Hurt <mhurt@msudenver.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2"
env_logger = "0.8"
actix-web = "3"
actix-identity = "0.3.1"
tera = "1"
serde = "1.0"
diesel = { version = "1.4.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
mysqlclient-sys = { version = ">=0.1.0, <0.3.0", optional = true }
chrono = { version = "0.4", features = ["serde"] }


